--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <script src="https://kit.fontawesome.com/95e3830982.js" crossorigin="anonymous"></script>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     
     <title>Welcome to dev connector</title>
   </head>
