--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
       content="Web site created using create-react-app"
     />
     <script src="https://kit.fontawesome.com/95e3830982.js" crossorigin="anonymous"></script>
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Welcome to dev connector</title>
   </head>
